--- a/index.html
+++ b/index.html
@@ -4,10 +4,55 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login page</title>
     <link rel="stylesheet" href="css/style.css">
+    <title>Login page</title>
 </head>
 <body>
-    
+    <div id="wrapper">
+        <div id="left">
+            <div id="signin">
+                <div class="logo">
+                    <img src="https://image.ibb.co/hW1YHq/login-logo.png" alt="Sluralright">
+                </div>
+                <form>
+                    <div>
+                        <label>Email or user name</label>
+                        <input type="text" class="text_input">
+                    </div>
+                    <div>
+                        <label>Password</label>
+                        <input type="password" class="text_input">
+                    </div>
+                    <button type="submit" class="primary_btn">Sing In</button>
+                </form>
+                <div class="links">
+                    <a href="#" class="link">Forgot password</a>
+                    <a href="#" class="link">Sing In with company or school</a>
+                </div>
+                <div class="or">
+                    <hr class="bar">
+                    <span>OR</span>
+                    <hr class="bar">
+                </div>
+                <a href="#" class="secondary_btn">Create an account</a>
+            </div>
+            <footer id="main_footer">
+                <p>Copyright &copy; 2018, Sluralright All Rights Reserved</p>
+                <div>
+                    <a href="#">Term of use</a> | <a href="#">Privacy policy</a>
+                </div>
+            </footer>
+        </div>
+        <div id="right">
+            <div id="showcase">
+                <div class="sowcase_content">
+                    <h1 class="showcase_text">Let's create the future 
+                        <strong>together</strong>
+                    </h1>
+                    <a href="#" class="secondary_btn">Start a FREE 10 day trial</a>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
